fix: typo and format

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -5,11 +5,10 @@ layout: ~/layouts/Blog.astro
 # Good for health, bad for...
 
 I'm a software engineer and FOSS advocate.  
-Some years ago a friend of my told about a "really cool" framework call
-Angular 2. That how I learned TypeScript.
-Back then, I was really into xmonad a dynamic window manager for the X Window System.
-Looking into the many frameworks, ReactJS was the one with most of the good stuff of
-functional-programming, that I like.
+Some years ago a friend of my told about a "really cool" framework called Angular 2.
+That how I learned TypeScript. Back then, I was using xmonad a dynamic window manager
+for the X Window System. Looking into the many frameworks, ReactJS was the one with
+most of the good stuff of functional-programming, that I like.
 
 My first computer was an IBM ThinkPad A31.
 I can't remember which exactly OS, but I guess it was Debian.
