--- a/src/content/chronicles/lf-previewers.mdx
+++ b/src/content/chronicles/lf-previewers.mdx
@@ -2,7 +2,7 @@
 title: 'lf Previewing files'
 description: ''
 image: '/chronicles/lf-previewer/image'
-date: 2024-06-10
+pubDate: 2024-06-10
 ---
 
 # LF
