feat: multiple-page layout.

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -1,13 +1,10 @@
 ---
-layout: ~/layouts/BaseLayout.astro
-title: 'About'
+layout: ~/layouts/GridLayout.astro
+title: 'Good for health, bad for...'
+cols: '2'
 ---
 
-import MarkdownWrapper from '~/components/ContentWrapper.astro'
-
-<MarkdownWrapper>
-
-# Good for health, bad for...
+<section>
 
 I'm a software engineer and FOSS advocate.  
 Some years ago a friend of my told about a "really cool" framework called Angular 2.
@@ -30,10 +27,14 @@ I write about NixOS, Arch Linux and web development.
 
 **tl;dr:** Monads.
 
+</section>
+
+<section>
+
 ### Stuff I'm doing right now
 
 - Learning Effect-TS
 - Reading ["Homunculus (Omnibus)"](https://myanimelist.net/manga/936/Homunculus)
 - Mastering Neco-Arc, I play Kohaku too. Type Lumina.
 
-</ MarkdownWrapper>
+</section>
