--- a/src/content/chronicles/nixos-install.mdx
+++ b/src/content/chronicles/nixos-install.mdx
@@ -13,34 +13,37 @@ pubDate: 2024-06-19
 > — Matt, The Linux Cast
 
 I will say the NixOS installation process is actually quite simple.  
-Whether you boot the Graphical or the Minimal ISO, the process doesn't take too much.
+Whether you boot the Graphical or the Minimal ISO, the process doesn't
+take too much.
 
-If we download the graphical image, it contains the **graphical NixOS installer**.
-For users who want to partition their disk with a graphical app, they can use
-[GParted](https://gparted.org/), which's already in the graphical ISO. Although my
-recommendation for those who just want to install NixOS, it's to go directly to the
-**graphical NixOS installer**.
+If we download the graphical image, it contains the **graphical NixOS
+installer**. For users who want to partition their disk with a graphical
+app, they can use [GParted](https://gparted.org/), which's already in the
+graphical ISO. Although my recommendation for those who just want to
+install NixOS, it's to go directly to the **graphical NixOS installer**.
 
 ![NixOS Plasma Desktop](/chronicles/nixos-install/NixOS_graphical_ISO)
 
-**note**: since the graphical install it not so much different than install any other
-distro that using [calamares](https://github.com/calamares/calamares) I'm going to cover
-just the "minimal image".
+**Note**: since the graphical installer is very most much the same as
+install any other distro that use the [calamares installer](https://github.com/calamares/calamares).
+I'm going to cover just the minimal ISO.
 
 ## Booting the minimal ISO
 
 ![NixOS minimal](/chronicles/nixos-install/NixOS_minimal_tty)
 
-As we can read in shell greeting, the NixOS manual would be our primarily resource
-for the installation.
+As we can read in shell's greeting, the NixOS manual would be our
+primarily resource for the installation.
 
-First, we would need to connect to the internet. Here it when most people give up, and boot
-a graphical image, so it has networkmanager, and we can use `nmtui`. I'll say it, you have
-way too many issues setting up internet on the minimal ISO, yes you can boot the graphical
-Environment, connect to network and then open a terminal and continue with the installation.
+First, we would need to connect to the internet. Here is when most people
+give up, and boot a graphical ISO, with networkmanager, so they can use
+`nmtui` to set up internet. I'll say if, you have way too many issues
+setting up internet on the minimal ISO, yes you can boot the graphical
+Environment, connect to network and then open a terminal and continue with
+the installation.
 
-What the NixOS manual tell us is to use wpa_supplicant. It is the same as when we install
-other "advance" users distros, so if you had previously set up the wireless network on
+What the NixOS manual tell us, is to use wpa_supplicant. It is the same as when we install
+another distros for "advance" users, so if you had previously set up the wireless network on
 any of those distros, it doesn't go to take you any time.
 
 ### Using wpa_passphrase
@@ -49,31 +52,27 @@ any of those distros, it doesn't go to take you any time.
 wpa_passphrase ESSID | sudo tee /etc/wpa_supplicant.conf
 ```
 
-By running `wpa_passphrase` we can get wpa_supplicant configuration.
-`wpa_passphrase`, then enter your password and restart wpa_supplicant.
+By running `wpa_passphrase` we can get wpa_supplicant configuration.  
+Then enter your password and restart wpa_supplicant.
+
+**Note**: To get the ESSID (Extended Service Set Identifier) run `iw dev`.
 
 ```sh
-[nixos@nixos:~]$ wpa_passphrase ESSID | sudo tee /etc/wpa_supplicant.conf
+sudo iw dev | grep Interface
+  Interface # wlp2s0, wlp12s0, wlan0..
+
+# replace interface with your device
+sudo iw dev `interface` scan | grep SSID
+
+wpa_passphrase ESSID | sudo tee /etc/wpa_supplicant.conf
 #reading_passphrase from stdin
-PASSPHRASE
 network={
   ssid="ESSID"
   #psk="PASSPHRASE"
   psk=dd34ad23098d17da4a43fb886126a6702172563b8e1daad3d102a9c0f8ce18f7
 }
-[nixos@nixos:~]$ sudo systemctl restart wpa_supplicant.service
-```
 
-**You can remove the psk comment from the wpa_passphrase output.**
-
-To get the ESSID (Extended Service Set Identifier), run `iw dev`.
-
-```sh
-[nixos@nixos:~]$ sudo iw dev | grep Interface
-	Interface # wlp2s0, wlp12s0, wlan0..
-
-# replace interface with your device
-[nixos@nixos:~]$ sudo iw dev `interface` scan | grep SSID
+sudo systemctl restart wpa_supplicant.service
 ```
 
 ### Using wpa_cli
@@ -111,9 +110,7 @@ sudo mkdir -p /mnt/boot
 sudo mount /dev/disk/by-label/NIX_BOOT /mnt/boot
 ```
 
-This is my configuration.
-
-**hardware-configuration.nix**
+### hardware-configuration.nix
 
 ```nix
 {
@@ -152,14 +149,13 @@ This is my configuration.
 }
 ```
 
-**lsblk output**
-![lsblk](/chronicles/nixos-install/lsblk)
+![lsblk output](/chronicles/nixos-install/lsblk)
 
 I don't have memory swap, but my recommendation if you have a btrfs partition is to
-make a _swapfile_.
+make a **swapfile**.
 
 ```sh
-sudo dd if=/dev/zero of=/mnt/.swapfile bs=1024 count=2097152 # (2GB size)
+sudo dd if=/dev/zero of=/mnt/.swapfile bs=1G count=4 # (4GB size)
 sudo chmod 600 /mnt/.swapfile
 sudo mkswap /mnt/.swapfile
 sudo swapon /mnt/.swapfile
@@ -167,18 +163,19 @@ sudo swapon /mnt/.swapfile
 
 ## NixOS configuration
 
-Run `sudo nixos-generate-config --root /mnt` to generate a configuration file in
-`/etc/nixos/configuration.nix` and `hardware-configuration.nix` or just use flake.
+Run **sudo nixos-generate-config --root /mnt** to generate a configuration
+file in /etc/nixos/configuration.nix and a hardware-configuration module.
 
-I want to cover nix flakes in a future article. Here would just give some recommendation.
+We can also have our config in a `nix flake`. I want to cover nix flakes
+in a future article. Here I would just give some recommendation.
 
 ### nix.settings
 
-Add the nix-command and flake to nix.settings.experimental-features, so you can start
-using nix 2.0 and flake.
+Add the nix-command and flake to `nix.settings.experimental-features`, so
+you can start using nix 2.0 and flake.
 
-Set nix.settings.use-xdg-base-directories to true, so when you use nix 2.0 it would
-follow [XDG Base Directory Specification](https://specifications.freedesktop.org/basedir-spec/basedir-spec-latest.html)
+Set `nix.settings.use-xdg-base-directories` to true, so when you use
+`nix 2.0` it would follow [XDG Base Directory Specification](https://specifications.freedesktop.org/basedir-spec/basedir-spec-latest.html)
 
 ```nix
 {
@@ -191,8 +188,8 @@ follow [XDG Base Directory Specification](https://specifications.freedesktop.org
 
 ### networking.networkmanager
 
-Enable network manager it the easist way to setup internet once we have install NixOS.
-It require by some desktop envirmomnents, too.
+Enabling network manager it the easiest way to set up internet once we have
+install NixOS. It may be required by some desktop environments, too.
 
 ```nix
 {
@@ -202,7 +199,8 @@ It require by some desktop envirmomnents, too.
 
 ### openssh
 
-Be careful with openssh, if you don't gonna need it, disable some options.
+Be careful with the service openssh , if you don't gonna need it, disable
+some options.
 
 ```nix
 {
@@ -220,15 +218,18 @@ Be careful with openssh, if you don't gonna need it, disable some options.
 ### initialHashedPassword
 
 Set a hashed password for the user, this is optional and not always recommended.
-Normally what most people would do is to log in into the root and change the password
-with `passwd`. With `users.users.<name>.initialHashedPassword` the users' password will
-be secure by a hash. If users.mutableUsers is true, then after we log in, we can change
-it. To generate a hashed password run `mkpasswd`.
+What most people would do is to log in into the root and set a password for the
+user with `passwd`. With the `users.users.<name>.initialHashedPassword` option
+the users' password will be secure by a hash. If `users.mutableUsers` is true,
+then after we log in, we can change the password.
 
-After the configuration is done run `sudo nixos-install` or
+**note**: to generate a hashed password run `mkpasswd`.
+
+## nixos-install
+
+After the configuration is done run `sudo nixos-install` in a shell to start the
+installation process or `nixos-rebuild switch` if your configuration is in a flake.
 
 ```sh
-sudo nixos-rebuild switch --flake .#hostname
+sudo nixos-install --flake .#hostname
 ```
-
-in a shell to start the installation process.
