feat(style): markdown content

--- a/src/content/chronicles/nixos-install.mdx
+++ b/src/content/chronicles/nixos-install.mdx
@@ -8,9 +8,8 @@ pubDate: 2024-06-19
 > “I don't think you can classify NixOS as a Linux distribution.  
 > It doesn't work like a Linux distribution”
 >
-> ---
->
-> — Matt, The Linux Cast
+> **Matt**  
+> _The Linux Cast_
 
 I will say the NixOS installation process is actually quite simple.  
 Whether you boot the Graphical or the Minimal ISO, the process doesn't
