feat: rename layouts/GridLayout.astro

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -1,5 +1,5 @@
 ---
-layout: ~/layouts/GridLayout.astro
+layout: ~/layouts/MultiSectContent.astro
 title: 'Good for health, bad for...'
 cols: '2'
 ---
